----------------------------------------------
                 TeamTalk
----------------------------------------------

Version 5.19, unreleased
Default Qt Client
- Ctrl+Shift+C to copy only message content in chat list
- Ctrl+Alt+Shift+C to copy all chat list history
- Ctrl+Shift+R to generate tt:// URL for current channel
- Bitrate for OPUS is limited to 6-510 in Channel dialog
- Fixed "Speak Client Statistics", "Enable/Disable Text-To-Speech Events", "Speak User/Channel Info" and "Speak Channel Statistics" availability if TTS events are only sent using push notification
- Fixed idle status message not being restored after network reconnection
- Fixed chat history name not retranslated on language change
- Fixed URL generation cancellation
- Fixed crash issue in "Connect to a Server" dialog on macOS 15.1
- macOS updated to Qt 6.10.0 beta1
Android Client
- Added the ability to set status messages
- Option to automatically join root channel in preferences
- Added the ability to control user's transmissions
- Ability to play sound when voice activation is toggled
- Ability to play sound for intercept subscription toggled
- Ability to use Text-To-Speech to announce transmission changes
- Ability to use Text-To-Speech to announce subscription changes
iOS Client
- Use VoiceOver to announce TTS events for screen reader users
Server
-

Version 5.18, 2025/05/05
Default Qt Client
- Media tab in main window for controlling media file streaming
- Support "{username}" variable for majority of TTS and status events related to user action
- Indication when user is sharing desktop in channel list
- Ability to restore all custom Text-To-Speech and status bar events to default values
- All byte sizes converted to local format
- Option to use TeamTalk Sound Output device for default sound event playback mode
- Option to choose bitween text or emoji for user and channel info in channel list
- Last login time shown in "User Accounts" dialog