@@ -95,6 +95,19 @@
              <widget class="QLineEdit" name="nicknameEdit"/>
             </item>
             <item>
+             <widget class="QLabel" name="label_statusmsg">
+              <property name="text">
+               <string>Status Message</string>
+              </property>
+              <property name="buddy">
+               <cstring>statusmsgEdit</cstring>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="statusmsgEdit"/>
+            </item>
+            <item>
              <spacer name="horizontalSpacer">
               <property name="orientation">
                <enum>Qt::Orientation::Horizontal</enum>
